src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: 'CustomHeadingFont';
	src: url('/fonts/FormulaCondensed-Bold.woff2') format('woff2');
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: 'AnekBangla-Regular';
	src: url('/fonts/AnekBangla-Regular.ttf') format('truetype');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'AnekBangla-Bold';
	src: url('/fonts/AnekBangla-Bold.ttf') format('truetype');
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: 'AnekBangla-SemiBold';
	src: url('/fonts/AnekBangla-SemiBold.ttf') format('truetype');
	font-weight: 600;
	font-style: normal;
}

@font-face {
	font-family: 'AnekBangla-Medium';
	src: url('/fonts/AnekBangla-Medium.ttf') format('truetype');
	font-weight: 500;
	font-style: normal;
}

/* @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap'); */
@layer components {
	.search-card-bold {
		@apply font-semibold text-[18.09px] md:text-[12px] lg:text-[17px];
	}
	.search-card-regular {
		@apply text-[16px] leading-[30px] text-black md:text-[12px] lg:text-[16px];
	}
}

h1,
h2 {
	@apply font-heading;
}

.swiper {
	width: 100%;
	/* height: 100%; */
}

.swiper-slide {
	text-align: center;
	font-size: 18px;
	background: #fff;

	/* Center slide text vertically */
	display: flex;
	justify-content: center;
	align-items: center;
}

/* for categories icons list only */
.categoriesSlide .swiper-slide {
	width: auto !important;
}

/* 
.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
} */

.swiper {
	width: 100%;
	height: auto;
	margin: 20px auto;
}
.categoryContainer .swiper {
	height: auto;
}

/* for categories list icons only */
.categoriesSlide .swiper {
	height: auto !important;
}

.swiper-button-disabled {
	opacity: 0.5;
	pointer-events: none;
}

.categoriesSlide .swiper-button-disabled {
	visibility: hidden;
}

/* Customize the calendar size */
.react-datepicker__month-container {
	width: 100%; /* Ensure full width */
}

/* Calendar container */
.react-datepicker {
	border-radius: 0.5rem; /* Rounded corners */
	grid-template-columns: none !important;
}

.react-datepicker__day--selected .react-datepicker__day_span {
	background-color: #e9082a;
}

.react-datepicker__day_span:hover {
	background-color: #e9082a !important;
	color: white !important;
}

.react-datepicker__day--range-end .react-datepicker__day_span {
	background-color: #e9082a !important;
	color: white !important;
}

.react-datepicker__day--keyboard-selected .react-datepicker__day_span,
.react-datepicker__day--in-selecting-range .react-datepicker__day_span:hover,
.react-datepicker__day--selecting-range-end .react-datepicker__day_span {
	background-color: #e9082a !important;
	color: white !important;
}

/* custom scrollbar for search drowpdown menu */
.search-dropdown-custom-scrollbar::-webkit-scrollbar {
	width: 13px; /* Width of vertical scrollbar */
	height: 13px; /* Height of horizontal scrollbar */
}

.search-dropdown-custom-scrollbar::-webkit-scrollbar-thumb {
	background-color: #828282; /* Color of the scroll thumb */
	border-radius: 14px; /* Rounded edges for the thumb */
	border: 2px solid #f9fafb; /* Space between thumb and track */
}

.search-dropdown-custom-scrollbar::-webkit-scrollbar-track {
	background-color: #e5e7eb; /* Color of the scroll track */
	border-radius: 14px;
}

/* For Firefox (using scrollbar-color and scrollbar-width) */
.search-dropdown-custom-scrollbar {
	scrollbar-width: thin; /* Thin scrollbar */
	scrollbar-color: #828282 #e5e7eb; /* Thumb color and track color */
}

/* .home-video-slider .swiper {
  width: 100%;
} */

.home-video-slider .swiper-slide {
	background-position: center;
	background-size: cover;
	width: 360px;
	height: auto;
	visibility: hidden !important;
	overflow: hidden;
	background: transparent !important;
}

@media only screen and (max-width: 640px) {
	.home-video-slider .swiper-slide {
		width: 300px !important;
	}
	.home-video-slider .mySwiper {
		min-height: 400px !important;
	}
}
@media only screen and (max-width: 430px) {
	.home-video-slider .swiper-slide {
		width: 243.27px !important;
	}
	.home-video-slider .mySwiper {
		min-height: 300px !important;
	}
}

.home-video-slider .mySwiper {
	min-height: 650px;
}

.home-video-slider .swiper-slide.swiper-slide-visible {
	visibility: visible !important;
}

.home-video-slider .swiper-slide-shadow-coverflow {
	display: none;
}

.home-video-slider .swiper-slide-prev .title {
	visibility: hidden !important;
}

.home-video-slider .swiper-slide-next .title {
	visibility: hidden !important;
}

/* result card arrow button of slider */

@media (max-width: 640px) {
  .custom-prev-result,
  .custom-next-result {
    width: 30px;
    height: 30px;
  }
}





/* header category */
.categoriesSlideHeader .swiper.swiper-initialized {
	margin: 0px 8px;
}

